# pooh-pursues-patterns

./: .gitignore  LICENSE  README.md  pyproject.toml
chapters/01_tokenization/: README.md
chapters/01_tokenization/phase1_bpe/: train_bpe.py  visualize_merges.py
chapters/01_tokenization/phase2_analysis/: tokenizer.py
chapters/02_positional_embeddings/: README.md  run_all.sh
chapters/02_positional_embeddings/phase1_classic/: compare_methods.py  learned.py  sinusoidal.py  visualize_encodings.py
chapters/02_positional_embeddings/phase2_rope/: visualize_rotation.py
chapters/02_positional_embeddings/phase3_alibi/: extrapolation_test.py
chapters/02_positional_embeddings/phase4_ablation/: no_position.py
chapters/02_positional_embeddings/shared/: toy_model.py  utils.py
chapters/03_attention/: README.md  run_all.sh
chapters/03_attention/phase1_single_head/: self_attention.py  train.py
chapters/03_attention/phase2_multi_head/: multi_head_attention.py
chapters/04_transformer_block/: constants.py  processing.py  training.py
llm/02_positional_embeddings/: test_all.py
llm/03_attention/: REPORT.md  test_all.py
llm/04_transformer_block/: tokenizer.py
rl/01_dpo/: constants.py  custom_dataset.py  data_processing.py  dpo_utils.py  gating.py  training.py  visualize_training.py
rl/02_grpo/: constants.py  custom_dataset.py  data_processing.py  grpo_utils.py  training.py  visualize_training.py
rl/03_ppo/: buffer.py  constants.py  custom_dataset.py  data_processing.py  lora.py  ppo_utils.py  training.py  visualize_training.py
(+30 files in other folders)
